# domainforge-lsp

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  security.yml
docs/: hover_plan.yml  mcp.md  plan.md  spec.md
docs/plans/: namespace_support.md
src/: ast_json.rs  backend.rs  capabilities.rs  code_actions.rs  completion.rs  diagnostics.rs  formatting.rs  lib.rs  line_index.rs  main.rs  navigation.rs  semantic_index.rs
src/hover/: markdown_renderer.rs  mod.rs  symbol_resolver.rs
src/mcp/: guardrails.rs  lsp_client.rs  main.rs  mod.rs  tools.rs  transport.rs
tests/: integration.rs
tests/fixtures/: invalid_syntax.sea  undefined_entity.sea  undefined_resource.sea  valid.sea
