[package]
name = "domainforge-lsp"
version = "0.1.0"
edition = "2021"
authors = ["DomainForge Contributors"]
description = "Language Server Protocol implementation for the DomainForge SEA DSL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GodSpeedAI/domainforge-lsp"
keywords = ["lsp", "language-server", "sea", "domainforge", "dsl"]
categories = ["development-tools", "text-editors"]

[dependencies]
# Core DSL logic from the main DomainForge repo
sea-core = { path = "../domainforge/sea-core" }

# LSP protocol implementation
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "domainforge-lsp"
path = "src/main.rs"

[dev-dependencies]
# For testing
