[package]
name = "domainforge-lsp"
version = "0.1.0"
edition = "2021"
authors = ["DomainForge Contributors"]
description = "Language Server Protocol implementation for the DomainForge SEA DSL"
license = "Apache-2.0"
repository = "https://github.com/GodSpeedAI/domainforge-lsp"
keywords = ["lsp", "language-server", "sea", "domainforge", "dsl"]
categories = ["development-tools", "text-editors"]

[dependencies]
# Core DSL logic from the main DomainForge repo
sea-core = { path = "../domainforge/sea-core" }

# LSP protocol implementation
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Semantic indexing and caches
pest = "2.7"
lru = "0.12"
blake3 = "1.5"

# Logging
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"


[[bin]]
name = "domainforge-lsp"
path = "src/main.rs"

[[bin]]
name = "domainforge-mcp"
path = "src/mcp/main.rs"


[dev-dependencies]
tempfile = "3.23.0"
# For testing
